Ensure right alignment of right menu dropdown

--- a/src/sass/shared/_navbar.scss
+++ b/src/sass/shared/_navbar.scss
@@ -21,6 +21,7 @@ nav.navbar {
     }
 
     ul.navbar-nav {
+        display: inline-block;
         .dropdown-menu {
             position: absolute;
         }
